<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondFragment"
    android:orientation="vertical"
    android:id="@+id/SecondFragment">
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/please"
    android:layout_gravity="center"
    android:textSize="27sp"
    android:textStyle="bold|italic"
    android:background="#8A9BF8"
    android:layout_marginTop="40dp"/>
<EditText
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/mail"
    android:textAlignment="center"
    android:layout_marginTop="100dp"
    android:id="@+id/tvEmail"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLength="1"
            android:id="@+id/et1"
            android:digits="1234567890"
            android:inputType="number"
            android:padding="@dimen/dp_20"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLength="1"
            android:id="@+id/et2"
            android:digits="1234567890"
            android:inputType="number"
            android:padding="@dimen/dp_20"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLength="1"
            android:id="@+id/et3"
            android:digits="1234567890"
            android:inputType="number"
            android:padding="@dimen/dp_20"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLength="1"
            android:id="@+id/et4"
            android:digits="1234567890"
            android:inputType="number"
            android:padding="@dimen/dp_20"/>

    </LinearLayout>
    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/verify"
        android:id="@+id/btn2"/>
</LinearLayout>